--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -17,13 +17,16 @@ akka {
     ]
   }
 
+  actor {
+    provider = "akka.cluster.ClusterActorRefProvider"
+  }
+
   kafka.consumer {
     kafka-clients {
       enable.auto.commit = true
       auto.commit.interval.ms = 1000
     }
   }
-
 }
 
 sp {
